--- a/bootstrap_template/index.html
+++ b/bootstrap_template/index.html
@@ -68,6 +68,64 @@
         </div>
     </section>
 
+    <!-- Carousel Section -->
+    <section class="py-5 bg-light">
+        <div class="container">
+            <div class="section-header text-center mb-5">
+                <h2 class="section-title">Featured Highlights</h2>
+                <p class="section-subtitle">Discover our amazing features and services</p>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                    <div id="featuredCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#featuredCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="carousel-content text-center">
+                                    <img src="images/pic01.jpg" class="d-block w-100 rounded" alt="Web Development" style="max-height: 400px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Web Development Excellence</h3>
+                                        <p>Custom web applications built with cutting-edge technologies and best practices.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="carousel-content text-center">
+                                    <img src="images/pic02.jpg" class="d-block w-100 rounded" alt="UI/UX Design" style="max-height: 400px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Beautiful UI/UX Design</h3>
+                                        <p>Intuitive and stunning user interfaces that provide exceptional user experience.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="carousel-content text-center">
+                                    <img src="images/pic03.jpg" class="d-block w-100 rounded" alt="Digital Innovation" style="max-height: 400px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Digital Innovation</h3>
+                                        <p>Pioneering digital solutions that transform businesses and drive growth.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#featuredCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#featuredCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Features Section -->
     <section id="features" class="py-5">
         <div class="container">
