--- a/bootstrap_template/landing.html
+++ b/bootstrap_template/landing.html
@@ -80,6 +80,56 @@
                 <h2 class="section-title">Our Services</h2>
                 <p class="section-subtitle">Comprehensive solutions tailored to your business requirements</p>
             </div>
+            
+            <!-- Services Carousel -->
+            <div class="row justify-content-center mb-5">
+                <div class="col-lg-10">
+                    <div id="servicesCarousel" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Service 1"></button>
+                            <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="1" aria-label="Service 2"></button>
+                            <button type="button" data-bs-target="#servicesCarousel" data-bs-slide-to="2" aria-label="Service 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="carousel-content text-center">
+                                    <img src="images/pic04.jpg" class="d-block w-100 rounded" alt="Web Development" style="max-height: 300px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-primary bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Web Development Excellence</h3>
+                                        <p>Custom web applications built with cutting-edge technologies and best practices.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="carousel-content text-center">
+                                    <img src="images/pic05.jpg" class="d-block w-100 rounded" alt="Mobile Development" style="max-height: 300px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-primary bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Mobile Development</h3>
+                                        <p>Native and cross-platform mobile applications that engage users and drive results.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="carousel-content text-center">
+                                    <img src="images/pic06.jpg" class="d-block w-100 rounded" alt="UI/UX Design" style="max-height: 300px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-primary bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>UI/UX Design</h3>
+                                        <p>Beautiful and intuitive user interfaces designed with user experience in mind.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#servicesCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#servicesCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div class="card h-100">
