--- a/plain_template/index.html
+++ b/plain_template/index.html
@@ -70,6 +70,60 @@
         </div>
     </section>
 
+    <!-- Carousel Section -->
+    <section class="section carousel-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Featured Highlights</h2>
+                <p class="section-subtitle">Discover our amazing features and services</p>
+            </div>
+            <div class="carousel-container">
+                <div class="carousel-wrapper">
+                    <div class="carousel-slide active">
+                        <div class="carousel-content">
+                            <img src="images/pic01.jpg" alt="Web Development" class="carousel-image">
+                            <div class="carousel-caption">
+                                <h3>Web Development Excellence</h3>
+                                <p>Custom web applications built with cutting-edge technologies and best practices.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-slide">
+                        <div class="carousel-content">
+                            <img src="images/pic02.jpg" alt="UI/UX Design" class="carousel-image">
+                            <div class="carousel-caption">
+                                <h3>Beautiful UI/UX Design</h3>
+                                <p>Intuitive and stunning user interfaces that provide exceptional user experience.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-slide">
+                        <div class="carousel-content">
+                            <img src="images/pic03.jpg" alt="Digital Innovation" class="carousel-image">
+                            <div class="carousel-caption">
+                                <h3>Digital Innovation</h3>
+                                <p>Pioneering digital solutions that transform businesses and drive growth.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-controls">
+                    <button class="carousel-btn prev-btn" onclick="changeSlide(-1)">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <button class="carousel-btn next-btn" onclick="changeSlide(1)">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                </div>
+                <div class="carousel-indicators">
+                    <span class="indicator active" onclick="currentSlide(1)"></span>
+                    <span class="indicator" onclick="currentSlide(2)"></span>
+                    <span class="indicator" onclick="currentSlide(3)"></span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Cards Section -->
     <section class="section">
         <div class="container">
