--- a/bootstrap_template/generic.html
+++ b/bootstrap_template/generic.html
@@ -65,9 +65,46 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                    <!-- Featured Image -->
+                    <!-- Featured Image Carousel -->
                     <div class="mb-5">
-                        <img src="images/pic07.jpg" class="img-fluid rounded shadow" alt="Our Office">
+                        <div id="genericCarousel" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#genericCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Image 1"></button>
+                                <button type="button" data-bs-target="#genericCarousel" data-bs-slide-to="1" aria-label="Image 2"></button>
+                                <button type="button" data-bs-target="#genericCarousel" data-bs-slide-to="2" aria-label="Image 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="images/pic07.jpg" class="d-block w-100 rounded" alt="Our Office" style="max-height: 400px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Our Modern Office</h3>
+                                        <p>Where creativity meets technology to build amazing solutions</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/pic08.jpg" class="d-block w-100 rounded" alt="Team Collaboration" style="max-height: 400px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Team Collaboration</h3>
+                                        <p>Working together to bring your vision to life</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="images/pic09.jpg" class="d-block w-100 rounded" alt="Innovation Hub" style="max-height: 400px; object-fit: cover;">
+                                    <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3 mt-3">
+                                        <h3>Innovation Hub</h3>
+                                        <p>Where ideas become reality through technology</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#genericCarousel" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#genericCarousel" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
 
                     <!-- Company Story -->
