--- a/plain_template/generic.html
+++ b/plain_template/generic.html
@@ -42,10 +42,53 @@
             </div>
             
             <div style="max-width: 800px; margin: 0 auto;">
-                <div class="card" style="margin-bottom: 3rem;">
-                    <div class="card-image">
-                        <img src="images/pic07.jpg" alt="Our Office">
+                <!-- Company Images Carousel -->
+                <div class="carousel-container" style="margin-bottom: 3rem;">
+                    <div class="carousel-wrapper">
+                        <div class="carousel-slide active">
+                            <div class="carousel-content">
+                                <img src="images/pic07.jpg" alt="Our Office" class="carousel-image">
+                                <div class="carousel-caption">
+                                    <h3>Our Modern Office</h3>
+                                    <p>Where creativity meets technology to build amazing solutions</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="carousel-content">
+                                <img src="images/pic08.jpg" alt="Team Collaboration" class="carousel-image">
+                                <div class="carousel-caption">
+                                    <h3>Team Collaboration</h3>
+                                    <p>Working together to bring your vision to life</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-slide">
+                            <div class="carousel-content">
+                                <img src="images/pic09.jpg" alt="Innovation Hub" class="carousel-image">
+                                <div class="carousel-caption">
+                                    <h3>Innovation Hub</h3>
+                                    <p>Where ideas become reality through technology</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <div class="carousel-controls">
+                        <button class="carousel-btn prev-btn" onclick="changeSlide(-1)">
+                            <i class="fas fa-chevron-left"></i>
+                        </button>
+                        <button class="carousel-btn next-btn" onclick="changeSlide(1)">
+                            <i class="fas fa-chevron-right"></i>
+                        </button>
+                    </div>
+                    <div class="carousel-indicators">
+                        <span class="indicator active" onclick="currentSlide(1)"></span>
+                        <span class="indicator" onclick="currentSlide(2)"></span>
+                        <span class="indicator" onclick="currentSlide(3)"></span>
+                    </div>
+                </div>
+
+                <div class="card" style="margin-bottom: 3rem;">
                     <div class="card-content">
                         <h3>Our Story</h3>
                         <p>Founded in 2020, Modern Template has been at the forefront of digital innovation, helping businesses transform their online presence and achieve remarkable growth. We believe that great design and technology can change the world.</p>
