--- a/plain_template/landing.html
+++ b/plain_template/landing.html
@@ -44,6 +44,52 @@
                 <h2 class="section-title">Our Services</h2>
                 <p class="section-subtitle">Comprehensive solutions tailored to your business requirements</p>
             </div>
+            
+            <!-- Services Carousel -->
+            <div class="carousel-container mb-5">
+                <div class="carousel-wrapper">
+                    <div class="carousel-slide active">
+                        <div class="carousel-content">
+                            <img src="images/pic04.jpg" alt="Web Development" class="carousel-image">
+                            <div class="carousel-caption">
+                                <h3>Web Development Excellence</h3>
+                                <p>Custom web applications built with cutting-edge technologies and best practices.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-slide">
+                        <div class="carousel-content">
+                            <img src="images/pic05.jpg" alt="Mobile Development" class="carousel-image">
+                            <div class="carousel-caption">
+                                <h3>Mobile Development</h3>
+                                <p>Native and cross-platform mobile applications that engage users and drive results.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-slide">
+                        <div class="carousel-content">
+                            <img src="images/pic06.jpg" alt="Cloud Solutions" class="carousel-image">
+                            <div class="carousel-caption">
+                                <h3>Cloud Solutions</h3>
+                                <p>Scalable cloud infrastructure and services that optimize your business operations.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-controls">
+                    <button class="carousel-btn prev-btn" onclick="changeSlide(-1)">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <button class="carousel-btn next-btn" onclick="changeSlide(1)">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                </div>
+                <div class="carousel-indicators">
+                    <span class="indicator active" onclick="currentSlide(1)"></span>
+                    <span class="indicator" onclick="currentSlide(2)"></span>
+                    <span class="indicator" onclick="currentSlide(3)"></span>
+                </div>
+            </div>
             <div class="cards-grid">
                 <div class="card">
                     <div class="card-image">
